--- a/desafio3-4-5-servidor/package.json
+++ b/desafio3-4-5-servidor/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "express-handlebars": "^6.0.6"
+    "express-handlebars": "^6.0.6",
+    "socket.io": "^4.5.4"
   }
 }
