--- a/desafio3-4-5-servidor/package.json
+++ b/desafio3-4-5-servidor/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "servers",
   "version": "1.0.0",
   "description": "",
@@ -12,6 +13,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
+    "knex": "^2.3.0",
+    "mysql2": "^2.3.3",
     "socket.io": "^4.5.4"
   }
 }
